--- a/index.html
+++ b/index.html
@@ -209,10 +209,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     <a class="close-button" href="javascript:hideDialog('dialog-about')" autofocus>&#128473;</a>
                 </div>
                 <div class="dialog-main">
-                    <b>Pitch-Class Set Visualizer, version <span id="version-number"></span></b>.<br />
+                    <b>Pitch-Class Set Visualizer, version <span id="version-number"></span></b>.
+                    <br />
                     Licensed under the <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">GNU Affero General Public License version 3</a>.<br />
-                    &#169;&nbsp;2024 Josias Matschulat.<br /><br />
+                    &#169;&nbsp;2024 Josias Matschulat.
+                    <br /><br />
                     Descriptive names adapted from Larry Solomon, &#169;&nbsp;1997, 2005,<br />with additions from Straus, 2016.
+                    <br /><br />
+                    Get the <a href="https://github.com/josiasmat/pcset-viz" target="_blank">source code</a> at GitHub.
                 </div>
             </dialog>
             <dialog id="dialog-set-selector" class="dialog-container">
