Replace equal sign with arrow in operation result

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                 </select>
                                 <input type="number" id="operation-index" name="operation-index" 
                                     min="-12" max="12" value="1" previous="1" size="2" oninput="operationUpdate()"/>
-                                =&nbsp;<span id="operation-result"></span>
+                                ⇒&nbsp;<span id="operation-result"></span>
                             </td>
                         </tr>
                         <tr id="row-binv" hidden>
