Make set features visible by default

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td i18n="row-descriptive-name">Descriptive name(s): <a class="icon-search" href="javascript:showDescriptionSelector()" hidden>&#128269;</a></td>
                             <td id="descriptive-name"></td>
                         </tr>
-                        <tr id="row-features" hidden>
+                        <tr id="row-features">
                             <td i18n="row-features">Set features: <a href="javascript:showFeaturesSelector()" hidden>&#128269;</a></td>
                             <td id="features"></td>
                         </tr>
