Fix favorite button not showing

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
               </td>
             </tr>
             <tr id="row-favorites">
-              <td i18n="row-favorites">Favorite sets: 
+              <td><span i18n="row-favorites">Favorite sets:</span> 
                 <a id="favorites-toggle" class="icon-star" href="javascript:toggleFavorite()">☆</a></td>
               <td id="favorites"></td>
             </tr>
