Set lang attribute of root html element

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title i18n="main-title">Pitch-Class Set Visualizer</title>
     <meta name="author" content="Josias Matschulat" />
