Added Spanish translation

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <script type="text/javascript" src="js/audio.js" defer></script>
     <script type="text/javascript" src="js/main.js" defer></script>
     <link rel="preload" href="data/en.json" as="fetch" type="application/json" crossorigin="anonymous">
+    <link rel="preload" href="data/es.json" as="fetch" type="application/json" crossorigin="anonymous">
     <link rel="preload" href="data/pt.json" as="fetch" type="application/json" crossorigin="anonymous">
     <link rel="icon" type="image/png" sizes="128x128" href="assets/favicon.png">
     <link rel="icon" type="image/svg+xml" sizes="any" href="assets/favicon.svg">
