Added functional inversion operator format

--- a/index.html
+++ b/index.html
@@ -458,6 +458,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     <input id="radio-inversionformat-tni" type="radio" name="inversion-format" value="TnI" onchange="onChange(true)">
                     <label i18n="options-inversion-op-2" for="radio-inversionformat-tni">Compound (<z class="operator">T<sub>n</sub>I</z>)</label>
                   </span>
+                  <span>
+                    <input id="radio-inversionformat-itn" type="radio" name="inversion-format" value="ITn" onchange="onChange(true)">
+                    <label i18n="options-inversion-op-3" for="radio-inversionformat-itn">Functional (<z class="operator">IT<sub>n</sub></z>)</label>
+                  </span>
                   <span class="keyboard-shortcut" style="float: inline-end;">(Alt+I)</span>
                 </td>
               </tr>
